syntax = "proto3";

option go_package = "/pubsub;pubsub";

package task;

service PubSub {
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
  rpc Publish(PublishRequest) returns (PublishResponse);
}

message SubscribeRequest {
  string topic = 1;
  string subscription = 2;
}

message SubscribeResponse {
  string topic = 1;
  string subscription = 2;
  string message = 3;
}

message PublishRequest {
  string topic = 1;
  string message = 2;
}

message PublishResponse {
  string topic = 1;
  string message = 2;
}

